actualizo ping pong con marcador

--- a/ejercicios/tema 5/juego ping pong/estilos.css
+++ b/ejercicios/tema 5/juego ping pong/estilos.css
@@ -20,7 +20,7 @@ div{
 
 #iz{
     position: relative;
-    bottom: -100px;
+    bottom: -190px;
     width: 200px;
     left: 50px;
 }
@@ -30,4 +30,32 @@ div{
     bottom: 50px;
     width: 200px;
     left: 1130px;
+}
+
+#velocidad1{
+    width: 100px;
+    position: relative;
+    bottom: -100px;
+    left: 400px;
+} 
+
+#velocidad2{
+    width: 100px;
+    position: relative;
+    bottom: -105px;
+    left: 400px;
+} 
+
+#velocidad3{
+    width: 100px;
+    position: relative;
+    bottom: -110px;
+    left: 400px;
+} 
+
+#velocidad{
+    width: 150px;
+    position: relative;
+    bottom: -120px;
+    left: 250px;
 }
