--- a/ejercicios/tema 5/juego ping pong/estilos.css
+++ b/ejercicios/tema 5/juego ping pong/estilos.css
@@ -59,3 +59,11 @@ div{
     bottom: -120px;
     left: 250px;
 }
+
+
+#pausa{
+    position: relative;
+    bottom: 100px;
+    width: 100px;
+    left: 900px;
+}
